--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,12 +1,29 @@
-html,
-body {
-	margin: 0;
-	padding: 0;
-	height: 100%;
-	background-color: #f0f2f5;
-}
-
 a {
 	text-decoration: none;
 	color: black;
+}
+
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	outline: none !important;
+}
+
+html,
+body,
+#root {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+	font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, SimSun, sans-serif;
+	font-weight: 400;
+	-webkit-font-smoothing: antialiased;
+	-webkit-tap-highlight-color: transparent;
+	background-color: var(--color-bg-1);
+	font-size: 14px;
+	overflow: hidden;
+	position: relative;
 }
